<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainMenuActivity">


    <Button
        android:id="@+id/btnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="250dp"
        android:text="@string/profile" />

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:text="@string/addItem" />

    <Button
        android:id="@+id/btnShowCollection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="20dp"
        android:text="@string/seeCollection" />

    <Button
        android:id="@+id/btnMuseums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="20dp"
        android:text="@string/museums" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="20dp"
        android:text="@string/logOut" />
</LinearLayout>