<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CollectionActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/editTxtIdToDelete"
        android:hint="@string/selectIdOfDeleteItem"
        android:inputType="number"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/deleteItem"
        android:id="@+id/btnDeleteItem"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/deleteDB"
        android:layout_marginTop="20dp"
        android:id="@+id/btnDeleteCollection"/>

    <ListView
        android:id="@+id/collecitonList"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="false"
        android:cacheColorHint="@color/colorPrimaryDark"
        android:divider="@color/colorPrimaryDark"
        android:dividerHeight="1px"/>

</LinearLayout>


